--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URL=mongodb+srv://moussa:moussa123@nodetuto.f62pu.mongodb.net/online?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://moussa:moussa123@nodetuto.f62pu.mongodb.net/online?retryWrites=true&w=majority
 PORT=8000
+NODE_ENV=production npm start
